tests/baselines/reference/jsdocCallbackAndType.errors.txt
/a.js(6,5): error TS2322: Type '{}' is not assignable to type 'B<string>'.
  Type '{}' provides no match for the signature '(): any'.
/a.js(8,3): error TS2554: Expected 0 arguments, but got 1.


==== /a.js (2 errors) ====
    /**
     * @template T
     * @callback B
     */
    /** @type {B<string>} */
    let b = {};
        ~
!!! error TS2322: Type '{}' is not assignable to type 'B<string>'.
!!! error TS2322:   Type '{}' provides no match for the signature '(): any'.
    b();
    b(1);
      ~
!!! error TS2554: Expected 0 arguments, but got 1.
    